--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "author": "Jacob Reilly-Cooper",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.4",
+    "path": "^0.12.7"
   }
 }
